[tool.poetry]
name = "urban-wind-simulation"
version = "0.1.0"
description = "Example function for Speckle Automate using specklepy"
authors = ["Gergő Jedlicska <gergo@jedlicska.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
specklepy = "^2.21.3"
archaea-simulation = "^1.3.0"
disttools = "^0.2.0"

[tool.poetry.group.dev.dependencies]
black = "^25.0.0"
mypy = "^1.3.0"
ruff = "^0.9.0"
pydantic-settings = "^2.3.0"
pytest = "^8.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
select = [
  "E",  # pycodestyle
  "F",  # pyflakes
  "UP", # pyupgrade
  "D",  # pydocstyle
  "I",  # isort
]

[tool.ruff.pydocstyle]
convention = "google"
